# dovi_meta

./: Cargo.toml  LICENSE  README.md
.github/actions/setup-release-env/: action.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: convert.rs  edl.rs  mod.rs
src/functions/: convert.rs  edl.rs  mod.rs
src/metadata/: mod.rs
src/metadata/cmv29/: display.rs  frame.rs  mod.rs  shot.rs  track.rs
src/metadata/cmv40/: display.rs  frame.rs  mod.rs  shot.rs  track.rs
src/metadata/display/: characteristics.rs  chromaticity.rs  mod.rs  primary.rs
src/metadata/levels/: level1.rs  level11.rs  level2.rs  level254.rs  level3.rs  level5.rs  level6.rs  level8.rs  level9.rs  mod.rs
