[package]
name = "dovi_meta"
version = "0.2.1"
edition = "2021"
authors = ["Rainbaby"]
rust-version = "1.67.0"
license = "MIT"
build = "build.rs"

[dependencies]
num-traits = "0.2.15"
num-derive = "0.4.0"

uuid = { version = "1.1.2", features = ["v4"] }

dolby_vision = "3.1.2"
# TODO: Use timecode as unique id, as an option.
vtc = "0.1.12"
chrono = "0.4.24"
serde = { version = "1.0.158", features = ["derive"] }
serde-aux = "4.0.0"
quick-xml = { version = "0.30.0", features = ["serialize"]}

clap = { version = "4.1.11", features = ["derive", "wrap_help"] }
anyhow = "1.0.70"
itertools = "0.11.0"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitcl"] }