[package]
name = "dovi_meta"
version = "0.2.2"
edition = "2021"
authors = ["Rainbaby"]
rust-version = "1.79.0"
license = "MIT"
build = "build.rs"

[dependencies]
num-traits = "0.2.19"
num-derive = "0.4.2"

uuid = { version = "1.8.0", features = ["v4"] }

dolby_vision = "3.3.0"
# TODO: Use timecode as unique id, as an option.
vtc = "0.1.13"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
quick-xml = { version = "0.32.0", features = ["serialize"]}

clap = { version = "4.5.7", features = ["derive", "wrap_help"] }
anyhow = "1.0.70"
itertools = "0.13.0"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "git", "gitcl"] }