[package]
name = "dovi_meta"
version = "0.3.0"
edition = "2021"
authors = ["Rainbaby"]
rust-version = "1.79.0"
license = "MIT"
build = "build.rs"

[dependencies]
num-traits = "0.2.19"
num-derive = "0.4.2"

uuid = { version = "1.11.0", features = ["v4"] }

dolby_vision = "3.3.1"
# TODO: Use timecode as unique id, as an option.
vtc = "0.1.13"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
quick-xml = { version = "0.37.1", features = ["serialize"] }

clap = { version = "4.5.21", features = ["derive", "wrap_help"] }
anyhow = "1.0.86"
itertools = "0.13.0"

[build-dependencies]
anyhow = "1.0.93"
vergen-gitcl = { version = "1.0.0", default-features = false, features = ["build"] }